--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 /* Default Light Theme */
 body {
 	font-family: Helvetica, sans-serif;
-	background-color: #f5f5f5;
-	color: #333;
+	background-color: #EEF4D4;
+	color: #1C2826;
 	margin: 0;
 	padding: 20px;
 }
