--- a/style.css
+++ b/style.css
@@ -25,6 +25,6 @@ button {
 
 /* Dark Theme */
 body.dark {
-	background-color: #121212;
-	color: #f5f5f5;
+	background-color: #1C2826;
+	color: #EEF4D4;
 }
