--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 /* Default Light Theme */
 body {
 	font-family: Helvetica, sans-serif;
-	background-color: #EEF4D4;
-	color: #1C2826;
+	background-color: #eef4d4;
+	color: #1c2826;
 	margin: 0;
 	padding: 20px;
 }
@@ -25,6 +25,6 @@ button {
 
 /* Dark Theme */
 body.dark {
-	background-color: #1C2826;
-	color: #EEF4D4;
+	background-color: #1c2826;
+	color: #eef4d4;
 }
