--- a/style.css
+++ b/style.css
@@ -1,30 +1,102 @@
 /* Default Light Theme */
+
 body {
-	font-family: Helvetica, sans-serif;
-	background-color: #eef4d4;
-	color: #1c2826;
-	margin: 0;
-	padding: 20px;
+    font-family:"Work Sans", sans-serif;
+    background-color: #F3E9DC;
+    color: #250902;
+    margin: 0;
+    padding: 20px;
+	font-style: italic;
+	font-weight: 300;
 }
 
 header {
-	text-align: center;
-	margin-bottom: 30px;
+    text-align: center;
+    margin-bottom: 30px;
+}
+
+h1, h2 {
+	font-weight: 500;
+	font-style: normal;
+	font-family: "Stack Sans Text", sans-serif;
+}
+
+section li {
+    font-weight: 300;
 }
 
 #profile-img {
-	width: 150px;
-	border-radius: 70%;
+    width: 150px;
+    border-radius: 70%;
 }
 
 button {
-	padding: 10px 20px;
-	margin-top: 10px;
-	cursor: pointer;
+    padding: 10px 20px;
+    margin-top: 10px;
+    cursor: pointer;
+    border-radius: 50px;
+    background-color: #250902; 
+    color: #F3E9DC;
+    border: none;
+}
+
+.achievement-img {
+    width: 500px;
+    border-radius: 10px;
+    cursor: pointer;
+}
+
+.achievement p {
+	font-weight: 300;
+}
+
+.viewer {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,0.85);
+    display: none;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
+}
+
+.viewer img {
+    max-width: 90%;
+    max-height: 90%;
+    border-radius: 10px;
+}
+
+.project-link {
+    color: #250902;
+    font-weight: 300;
+    text-decoration: none;
+}
+
+.project-link:hover {
+    text-decoration: underline;
+}
+
+ul {
+	list-style: none;
+	padding-left: 0;
+	margin-left: 0;
 }
 
 /* Dark Theme */
 body.dark {
-	background-color: #1c2826;
-	color: #eef4d4;
+    background-color: #250902;
+    color: #F3E9DC;
+}
+
+body.dark button {
+    background-color: #F3E9DC; 
+    color: #250902;
+}
+
+body.dark .project-link {
+	background-color: #250902;
+    color: #F3E9DC;
 }
