--- a/style.css
+++ b/style.css
@@ -24,6 +24,10 @@ h1, h2 {
 section li {
     font-weight: 300;
 }
+#email {
+	margin-top: -10px;
+	font-size: 14px;
+}
 
 #profile-img {
     width: 150px;
